<?xml version="1.0"?>
<package>
  <name>dynamixel_pro_moveit_controller</name>
  <version>0.8.1</version>
  <description>The dynamixel_pro_moveit_controller package, it interprets joint trajectories and uses the low level drivers to directly control the arm. Avoiding the extra layer of translating the joint_trajectory messages to joint_state messages</description>
  <maintainer email="baxelrod@willowgarage.com">Brian Axelrod</maintainer>


  <license>BSD</license>


  <!-- <url type="website">http://ros.org/wiki/dynamixel_pro_moveit_controller</url> -->


  <author email="baxelrod@willowgarage.com">Brian Axelrod</author> 


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamixel_pro_controller</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamixel_pro_controller</run_depend>


  <export>
    <moveit_core plugin="${prefix}/dynamixel_pro_moveit_controller_manager_plugin_description.xml"/>
  </export>
</package>
